# WebGLRuntime

./: .gitattributes  .gitignore  meson.build  package.json  tsconfig.json
idl/: core.idl  imguiBind.idl  test.json  webgl.idl
res/: glTest.js  hello.js  helloGui.js  helloTypeScript.ts  newApp.js  terrainTest.ts  threeJsTest.js  threeJsTest.ts  webGLRuntime.d.ts
scripts/: codegen.py  codegen_idl.py  libcodegen.py  run.sh
src/: codegen_utils.cc  codegen_utils.h  js_imgui.cc  js_imgui.h  js_webgl.cc  js_webgl.h  main.cc
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
